# ElevateMyDish

./: NOTES.txt  README.md  TODO.txt  main.py  pyproject.toml
data/: chive_graph.json  ingredients.json  network_graph.html  tsne.html
src/: main.ipynb
